@@ -2,6 +2,7 @@ Upcoming:
 - Fixed a crash in the inventory checker when setting illegal slot values
 - Syringe no longer appears in every creative tab
 - Correct translation for Syringe
+- Forgot the recipe for the syringe
 
 1.15-2.1.9:
 - Fixed a problem on servers
